fix: Refactor report generation logic to use getFirst() for top 3 fillings